--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Enter Name</title>
 </head>
 <body style="text-align:center; margin-top:50px; font-family:sans-serif;">
-  <h2>Enter the first name of u (No Capital)</h2>
+  <h2>Enter the first name of u (No Capital) Double(e)</h2>
   <input type="text" id="nameInput" placeholder="Type here">
   <br><br>
   <button onclick="checkName()">Submit</button>
@@ -28,4 +28,5 @@
   </script>
 </body>
 </html>
+
 
